# agents-production-studio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  USAGE.md  USAGE.zh-CN.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents_corpus_workflow/: __init__.py  api.py  capability.py  cli.py  corpus.py  generation.py  labels.py  llm.py  logging_utils.py  models.py  service.py  time_utils.py  web_ui.py
deployment/: README.zh-CN.md
deployment/docker/: Dockerfile  compose.yaml
deployment/env/: agents-studio.env.example
deployment/scripts/: package_release.sh  start.sh
deployment/systemd/: agents-studio.service
docs/: FILLING_GUIDE.en.md  FILLING_GUIDE.zh-CN.md  RELEASE_PREPARATION_LOG.zh-CN.md  USER_GUIDE.en.md  USER_GUIDE.zh-CN.md  WORKSPACE_STRUCTURE.zh-CN.md
examples/form_inputs/: excellent_sample.zh-CN.json  good_sample.zh-CN.json  minimal_sample.zh-CN.json
tests/: test_workflow.py
